<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/single_question_layout_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/single_question_layout_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/single_question_layout_nextRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_repeat" />

        <TextView
            android:id="@+id/single_question_layout_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Actually Level: 5" />
    </LinearLayout>


</LinearLayout>