<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="pl.michalkruczek.learn.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="38sp"
        android:layout_marginBottom="50sp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/learn_everything" />



        <TextView
            android:id="@+id/main_numberOfAllQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/main_numberOfTodayQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_margin="50sp"
            android:gravity="center"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/main_repeat"
                android:onClick="mainTodayRepeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                app:srcCompat="@mipmap/ic_repeat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/repeat" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/main_addQuestion"
                android:onClick="mainAddQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                app:srcCompat="@mipmap/ic_add_question" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/add_question" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/main_showDb"
                android:onClick="mainShowDb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                app:srcCompat="@mipmap/ic_show_db" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/show_all_questions" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">


            <ImageButton
                android:id="@+id/main_info"
                android:onClick="mainInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                app:srcCompat="@mipmap/ic_info" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/info" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
